[tool.poetry]
name = "row-level-security"
version = "0.1.0"
description = ""
authors = ["mpdevilleres <mpdevilleres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
passlib = {extras = ["argon2"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
